fixed another bug where nav menu flickers off and on

--- a/src/Navbar/Header.css
+++ b/src/Navbar/Header.css
@@ -39,17 +39,15 @@
     height: 100vh;
     width: 100vw;
 
-    display: none;
     background-color: rgba(0, 0, 0, 0);
     backdrop-filter: brightness(100%) blur(0px);
 
-    transition: backdrop-filter 0.1s ease-in, display 0s linear 0.1s;
+    transition: backdrop-filter 0.1s ease-in;
 }
 
 #screenblur[show-nav="1"][is-large="0"] {
 
-    display: inline;
     backdrop-filter: brightness(60%) blur(10px);
 
-    transition: backdrop-filter 0.1s ease-in, display 0s linear 0s;
+    transition: backdrop-filter 0.1s ease-in;
 }
